--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>KOFMANN</title>
 </head>
 <body>
-    <h1>ZZZZ 12312</h1>
+   <div class="container">
+       <h1>ZZZZ 12312</h1>
+   </div>
 </body>
 </html>
