--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+<!--    <link rel="shortcut icon" href="http://www.iconj.com/ico/y/n/ynyncjso9n.ico" type="image/x-icon" />-->
     <title>KOFMANN</title>
 </head>
 <body>
