--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                 <svg viewBox="0 0 36 36" class="circular-chart">
                     <path class="circle-bg" d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"></path>
                     <path class="circle" stroke-dasharray="74.95, 100" d="M18 2.0845 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831"></path>
-                    <text x="18" y="20.35" class="percentage">74,9</text>
+                    <text x="18" y="20.35" class="percentage
+">74,9</text>
                 </svg>
             </div>
             <div class="single-chart">
