--- a/index.html
+++ b/index.html
@@ -490,123 +490,110 @@
         <div class="swiper-container sw2">
             <div class="swiper-wrapper mb-xl-150">
                 <div class="swiper-slide">
-                    <div class="row mb-80 mx-md-15">
-                        <div class="marg-cent">
-                            <div class="cards bg-primary x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-darker mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-darker bold h4">1-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2016/08/11/00/46/business-lady-1584654_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent mb-80">
+                        <div class="cards bg-primary x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-darker mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-darker bold h4">1-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2016/08/11/00/46/business-lady-1584654_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="row mx-md-15">
-                        <div class="marg-cent mt-xl-100">
-                            <div class="cards bg-darker x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-primary bold h4">2-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2015/11/26/00/14/fashion-1063100_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent mt-xl-100">
+                        <div class="cards bg-darker x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-primary bold h4">2-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2015/11/26/00/14/fashion-1063100_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="row mx-md-15">
-                        <div class="marg-cent">
-                            <div class="cards bg-primary x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-darker mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-darker bold h4">3-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2017/08/30/17/27/business-woman-2697954_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent">
+                        <div class="cards bg-primary x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-darker mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-darker bold h4">3-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2017/08/30/17/27/business-woman-2697954_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="row mx-md-15">
-                        <div class="marg-cent mt-xl-100">
-                            <div class="cards bg-darker x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-primary bold h4">4-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent mt-xl-100">
+                        <div class="cards bg-darker x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-primary bold h4">4-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="row mx-md-15">
-                        <div class="marg-cent">
-                            <div class="cards bg-primary x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-darker text-light mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-darker bold h4">5-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2012/10/10/11/06/moon-walk-60616_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent">
+                        <div class="cards bg-primary x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-darker text-light mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-darker text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-darker bold h4">5-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 text-darker pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-darker" src="https://cdn.pixabay.com/photo/2012/10/10/11/06/moon-walk-60616_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="row mx-md-15">
-                        <div class="marg-cent mt-xl-100">
-                            <div class="cards bg-darker x-center flex-column text-white pos-rel py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
-                                <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
-                                    <svg>
-                                        <use xlink:href="#icon-mark"></use>
-                                    </svg>
-                                </div>
-                                <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
-                                <div class="cards-name text-primary bold h4">6-Rachel Moreno</div>
-                                <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
-                                <div class="cards-avat position-absolute">
-                                    <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2017/04/07/15/44/girl-2211234_960_720.jpg" alt="">
-                                </div>
+                    <div class="marg-cent mt-xl-100">
+                        <div class="cards bg-darker x-center flex-column text-white pos-rel mx-15 mx-md-0 py-30 px-35 py-xl-40 px-xl-60 flex-grow-0">
+                            <div class="s-mark link-text-light text-light mb-30 mb-xl-45">
+                                <svg>
+                                    <use xlink:href="#icon-mark"></use>
+                                </svg>
+                            </div>
+                            <div class="speacg text-white text-size-1 pb-25 pb-xl-45">Attending a trade show can be a very effective method of promoting your company and its products.</div>
+                            <div class="cards-name text-primary bold h4">6-Rachel Moreno</div>
+                            <div class="cards-descr text-size-1 pb-65">Lead Designer in <span class="bold">okodesign.net</span></div>
+                            <div class="cards-avat position-absolute">
+                                <img class="cards-avat-pic rounded-circle border-2 text-warning" src="https://cdn.pixabay.com/photo/2017/04/07/15/44/girl-2211234_960_720.jpg" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- Add Pagination -->
-            <div class="swiper-pagination">
-            </div>
+            <div class="swiper-pagination"></div>
         </div>
 
     </div>
@@ -904,10 +891,10 @@
                 slidesPerGroup: 2
             }
         },
-        autoplay: {
+/*        autoplay: {
             delay: 5000,
             disableOnInteraction: false,
-        }
+        }*/
     });
 </script>
 
