--- a/index.html
+++ b/index.html
@@ -134,9 +134,8 @@
 <body>
 <!--    1  -->
 
-<header class="d-n header bg-title">
+<header class="header bg-title position-relative">
     <div class="d-n media-breakpoint position-absolute z-index-5"></div>
-
     <div class="container position-relative">
 
         <nav class="d-none d-lg-flex navbar navbar-expand-lg">
@@ -203,9 +202,10 @@
 
 <!--    2  -->
 
-<section class="d-n results bg-white position-relative">
+<section class="results bg-white position-relative">
     <div class="container text-center py-45 py-md-50 py-xl-55">
-        <h2 class="h2 l-spacing-1 bold text-nowrap text-darker pb-5 pd-md-10 pb-xl-15">Stunning Results</h2>
+
+        <h2 class="my-h2 mb-0">Stunning Results</h2>
         <div class="row">
             <div class="col-11 col-md-9 col-xl-6 text-truncate text-size-1 text-darker mx-auto pb-35 pb-md-30 pb-xl-50">Just
                 look to the statistics we have
@@ -255,17 +255,15 @@
 
 <!--    3  -->
 
-<section class="d-n what bg-clients">
-    <div class="container py-45 py-md-50 py-xl-55 x-center flex-column">
+<section class="what bg-clients position-relative">
+    <div class="container py-45 py-md-50 py-xl-55 text-center x-center flex-column">
 
-        <h5 class="user-name h2 mb-20 mb-md-25 mb-xl-50 text-center text-white bold">What Clients are saying</h5>
+        <h2 class="my-h2 text-white mb-0">What Clients are saying</h2>
         <div class="b-mark text-primary mx-auto my-20 my-xl-30">
             <svg>
                 <use xlink:href="#icon-mark"></use>
             </svg>
         </div>
-
-
         <!-- Swiper -->
         <div class="swiper-container sw1">
             <!-- Left Arrows -->
@@ -347,10 +345,10 @@
 
 <!--    4  -->
 
-<section class="d-n products bg-white position-relative">
-
+<section class="products bg-white position-relative">
     <div class="container text-center py-45 py-md-50 py-xl-55">
-        <h2 class="h2 l-spacing-1 bold text-nowrap text-darker pb-5 pd-md-10 pb-xl-15">Recent Products</h2>
+
+        <h2 class="my-h2 mb-0">Recent Products</h2>
         <div class="text-size-1 text-darker mx-auto pb-35 pb-md-30 pb-xl-50">Having used discount toner cartridges for
             twenty years, there have been a lot of changes in the toner cartridge market. The market today is
             approximately a twenty billion dollar business.
@@ -458,10 +456,10 @@
 
 <!--    5  -->
 
-<section class="d-n selling bg-primary position-relative">
-
+<section class="selling bg-primary position-relative">
     <div class="container text-center py-45 py-md-50 py-xl-55">
-        <h2 class="h2 l-spacing-1 bold text-nowrap text-darker pb-5 pd-md-10 pb-xl-15">Start Selling Instantly</h2>
+
+        <h2 class="my-h2 mb-0">Start Selling Instantly</h2>
         <div class="row">
             <div class="col-8 col-md-4  text-size-1 text-darker mx-auto pb-15 pb-md-35 pb-xl-30 px-md-50">
                 Start Selling With Your Pre-paid account. No deposit needed.
@@ -479,14 +477,11 @@
 
 <!--    6  -->
 
-<section class="d-n testimonials bg-white position-relative">
+<section class="testimonials bg-white position-relative">
+    <div class="container text-center py-45 py-md-50 py-xl-55">
 
-    <div class="container py-45 py-md-50 py-xl-55 x-center flex-column">
-
-        <h5 class="d-xl-none marg-cent user-name h2 mb-20 mb-md-25 mb-xl-50 text-center text-darker bold">Testimonials</h5>
-        <h5 class="d-none d-xl-block col-xl-4 marg-cent user-name h2 mb-20 mb-md-25 mb-xl-50 text-center text-darker bold">What People Say</h5>
-
-
+        <h2 class="d-xl-none my-h2 mb-0">Testimonials</h2>
+        <h2 class="d-none d-xl-block my-h2 mb-0">What People Say</h2>
         <div class="swiper-container sw2">
             <div class="swiper-wrapper mb-xl-150">
                 <div class="swiper-slide">
@@ -601,10 +596,9 @@
 
 <!--    7  -->
 
-<section class="d-n plans bg-lighter position-relative">
-
-    <div class="container py-45 py-md-50 py-xl-55 x-center flex-column">
-        <h5 class="user-name h2 mb-20 mb-md-25 mb-xl-50 text-center text-darker bold">Subscribing Plans</h5>
+<section class="plans bg-lighter position-relative">
+    <div class="container py-45 py-md-50 py-xl-55 text-center">
+        <h5 class="my-h2 mb-0">Subscribing Plans</h5>
         <div class="plans-sect row d-flex justify-content-around flex-wrap">
             <div class="plans-t col-6 col-md-3 pb-15 pb-md-0">
                 <div class="cards bg-white pos-rel">
@@ -689,9 +683,9 @@
 <!--    8  -->
 
 <section class="get-in bg-touch position-relative">
-
     <div class="container text-center py-45 py-md-50 py-xl-55">
-        <div class="h2 bold text-white pb-30 pb-md-35 pb-xl-50">Get in Touch</div>
+
+        <div class="my-h2 text-white mb-0">Get in Touch</div>
         <div class="get-in-sect row justify-content-around pb-xl-50">
             <div class="col-12 col-md-4">
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
@@ -718,7 +712,6 @@
                 </div>
             </div>
         </div>
-
         <div class="d-md-flex justify-content-center pt-45 pt-md-0 pr-xl-25" >
             <div class="address y-center text-white text-nowrap mr-md-45">
                 <svg width="20" height="20">
@@ -748,8 +741,8 @@
 <!--    9  -->
 
 <footer class="footer bg-darker position-relative">
-
     <div class="container py-45 py-md-50 py-xl-55">
+
         <div class="footer-up">
             <div class="row">
                 <div class="col-6 col-sm-3 pb-35">
@@ -842,6 +835,7 @@
         </div>
     </div>
 </footer>
+
 <a href="#" class="">
 <div class="up scrollup pos-fix up-position xy-center z-index-5 b-radius-4 bg-primary">
         <div class="go-to-topp link-text-dark text-dark">
