--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
         <h2 class="d-xl-none my-h2 mb-0">Testimonials</h2>
         <h2 class="d-none d-xl-block my-h2 mb-0">What People Say</h2>
-        <div class="swiper-container sw2">
+        <div class="swiper-container my-swiper-container sw2">
             <div class="swiper-wrapper mb-xl-150">
                 <div class="swiper-slide">
                     <div class="marg-cent mb-80">
@@ -588,7 +588,8 @@
                 </div>
             </div>
             <!-- Add Pagination -->
-            <div class="swiper-pagination"></div>
+            <div class="swiper-pagination">
+            </div>
         </div>
 
     </div>
