--- a/index.html
+++ b/index.html
@@ -355,22 +355,22 @@
         </div>
         <div class="products-sect row d-md-flex d-flex flex-column flex-sm-row flex-sm-nowrap justify-content-around">
             <div class="products-elem col-12 col-sm-4 pb-30 pb-sm-0 y-center flex-column">
-                <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
-                    <img class="products-pic rounded-circle border-4 text-light" src="images/1214385.jpg" alt="">
-                    <a href="#">
-                        <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                <a href="#">
+                    <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
+                        <img class="products-pic rounded-circle border-4 text-light" src="images/1214385.jpg" alt="">
+                            <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                                <svg>
+                                    <use xlink:href="#icon-view"></use>
+                                </svg>
+                            </div>
+                        <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
                             <svg>
                                 <use xlink:href="#icon-view"></use>
                             </svg>
+                            <div class="count ml-5">67422</div>
                         </div>
-                    </a>
-                    <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
-                        <svg>
-                            <use xlink:href="#icon-view"></use>
-                        </svg>
-                        <div class="count ml-5">67422</div>
                     </div>
-                </div>
+                </a>
                 <div class="elem-title text-darker mb-20 mb-xl-35">
                     <div class="caption-2 bold">APP MAINTENANCE</div>
                     <div class="text-size-1 italic">by</div>
@@ -379,22 +379,22 @@
                 <a class="link-text-darker" href="#"><div class="elem-btn my-btn bg-lighter border-2 caption-3 px-30 px-xl-60">REVIEW</div></a>
             </div>
             <div class="products-elem col-12 col-sm-4 pb-30 pb-sm-0 y-center flex-column">
-                <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
-                    <img class="products-pic rounded-circle border-4 text-light" src="images/1414385.jpg" alt="">
-                    <a href="#">
-                        <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                <a href="#">
+                    <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
+                        <img class="products-pic rounded-circle border-4 text-light" src="images/1414385.jpg" alt="">
+                            <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                                <svg>
+                                    <use xlink:href="#icon-view"></use>
+                                </svg>
+                            </div>
+                        <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
                             <svg>
                                 <use xlink:href="#icon-view"></use>
                             </svg>
+                            <div class="count ml-5">91322</div>
                         </div>
-                    </a>
-                    <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
-                        <svg>
-                            <use xlink:href="#icon-view"></use>
-                        </svg>
-                        <div class="count ml-5">91322</div>
                     </div>
-                </div>
+                </a>
                 <div class="elem-title text-darker mb-20 mb-xl-35">
                     <div class="caption-2 bold">FTA KEYS</div>
                     <div class="text-size-1 italic">by</div>
@@ -403,22 +403,22 @@
                 <a class="link-text-darker" href="#"><div class="elem-btn my-btn bg-lighter border-2 caption-3 px-30 px-xl-60">REVIEW</div></a>
             </div>
             <div class="products-elem col-12 col-sm-4 pb-30 pb-sm-0 y-center flex-column">
-                <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
-                    <img class="products-pic rounded-circle border-4 text-light" src="images/23214432.png" alt="">
-                    <a href="#">
-                        <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                <a href="#">
+                    <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
+                        <img class="products-pic rounded-circle border-4 text-light" src="images/23214432.png" alt="">
+                            <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                                <svg>
+                                    <use xlink:href="#icon-view"></use>
+                                </svg>
+                            </div>
+                        <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
                             <svg>
                                 <use xlink:href="#icon-view"></use>
                             </svg>
+                            <div class="count ml-5">31265</div>
                         </div>
-                    </a>
-                    <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
-                        <svg>
-                            <use xlink:href="#icon-view"></use>
-                        </svg>
-                        <div class="count ml-5">31265</div>
                     </div>
-                </div>
+                </a>
                 <div class="elem-title text-darker mb-20 mb-xl-35">
                     <div class="caption-2 bold">SMART WATCH</div>
                     <div class="text-size-1 italic">by</div>
@@ -427,22 +427,22 @@
                 <a class="link-text-darker" href="#"><div class="elem-btn my-btn bg-lighter border-2 caption-3 px-30 px-xl-60">REVIEW</div></a>
             </div>
             <div class="products-elem col-12 col-sm-4 pb-30 pb-sm-0 y-center flex-column">
-                <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
-                    <img class="products-pic rounded-circle border-4 text-light" src="images/ba347fcc9a79fb74e95670b24848164f.jpg" alt="">
-                    <a href="#">
-                        <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                <a href="#">
+                    <div class="recent-products recent-products-size position-relative mb-10 mb-md-15 mb-xl-30">
+                        <img class="products-pic rounded-circle border-4 text-light" src="images/ba347fcc9a79fb74e95670b24848164f.jpg" alt="">
+                            <div class="view view-size view-hover position-absolute abs-cent text-white z-index-5">
+                                <svg>
+                                    <use xlink:href="#icon-view"></use>
+                                </svg>
+                            </div>
+                        <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
                             <svg>
                                 <use xlink:href="#icon-view"></use>
                             </svg>
+                            <div class="count ml-5">75352</div>
                         </div>
-                    </a>
-                    <div class="count-view view-hover y-center text-white position-absolute count-view-posit">
-                        <svg>
-                            <use xlink:href="#icon-view"></use>
-                        </svg>
-                        <div class="count ml-5">75352</div>
                     </div>
-                </div>
+                </a>
                 <div class="elem-title text-darker mb-20 mb-xl-35">
                     <div class="caption-2 bold">WATCH APPS</div>
                     <div class="text-size-1 italic">by</div>
@@ -466,7 +466,7 @@
             </div>
         </div>
         <form class="forms" method="post" action="#" id="login">
-            <input class="input input-text-2 input-theme bg-white placeholder-color input-placeholder pos-rel z-i-1 text-size-1 mb-15 mb-xl-20 pl-15"
+            <input class="input input-text-2 input-theme bg-white pos-rel z-i-1 text-size-1 mb-15 mb-xl-20 pl-15"
                    id="sign-mail" type="text" placeholder="Email">
             <div class="selling-btn">
                 <a href="#" class="my-btn bg-darker text-white px-50">REGISTER</a>
@@ -691,11 +691,11 @@
             <div class="col-12 col-md-4">
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
                     <form class="forms y-center flex-column" method="post" action="#" id="get-in">
-                        <input class="input input-text input-theme input-placeholder bg-white placeholder-color pos-rel z-index1 text-size-1 mb-15 mb-xl-20 pl-15"
+                        <input class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
                                id=name" type="text" placeholder="Name*">
-                        <input class="input input-text input-theme input-placeholder bg-white placeholder-color pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
+                        <input class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
                                id="email" type="text" placeholder="Email*">
-                        <textarea class="input input-text input-theme input-placeholder bg-white placeholder-color pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
+                        <textarea class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
                                   id="message-farm" placeholder="Message"></textarea>
                         <div class="checked-sect y-center text-light z-index-1 mb-10 mb-xl-20">
                             <label class="checkbox-label y-center">
@@ -747,8 +747,8 @@
         <div class="footer-up">
             <div class="row">
                 <div class="col-6 col-sm-3 pb-35">
-                    <div class="footer-block-title caption-2 bold text-white">COMPANY</div>
-                    <div class="footer-block-list text-size-1 text-white">
+                    <div class="footer-block-title text-white">COMPANY</div>
+                    <div class="footer-block-list text-white">
                         <a href="#"><div class="list-item py-5">News</div></a>
                         <a href="#"><div class="list-item py-5">Blog</div></a>
                         <a href="#"><div class="list-item py-5">Testimonials</div></a>
@@ -758,8 +758,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-3 pb-35">
-                    <div class="footer-block-title caption-2 bold text-white">PRODUCTS</div>
-                    <div class="footer-block-list text-size-1 text-white">
+                    <div class="footer-block-title text-white">PRODUCTS</div>
+                    <div class="footer-block-list text-white">
                         <a href="#"><div class="list-item py-5">UI Kits</div></a>
                         <a href="#"><div class="list-item py-5">Icons</div></a>
                         <a href="#"><div class="list-item py-5">Wordpress  Themes</div></a>
@@ -767,8 +767,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-3 pb-35">
-                    <div class="footer-block-title caption-2 bold text-white">SUPPORT</div>
-                    <div class="footer-block-list text-size-1 text-white">
+                    <div class="footer-block-title text-white">SUPPORT</div>
+                    <div class="footer-block-list text-white">
                         <a href="#"><div class="list-item py-5">Community</div></a>
                         <a href="#"><div class="list-item py-5">Forum</div></a>
                         <a href="#"><div class="list-item py-5">Distributors</div></a>
@@ -777,8 +777,8 @@
                     </div>
                 </div>
                 <div class="col-6 col-sm-3 pb-35">
-                    <div class="footer-block-title caption-2 bold text-white">SUPPORT</div>
-                    <div class="footer-block-list text-size-1 text-white">
+                    <div class="footer-block-title text-white">SUPPORT</div>
+                    <div class="footer-block-list text-white">
                         <a href="#"><div class="list-item py-5">Documentation</div></a>
                         <a href="#"><div class="list-item py-5">Tools</div></a>
                         <a href="#"><div class="list-item py-5">Downloads</div></a>
