--- a/index.html
+++ b/index.html
@@ -690,12 +690,12 @@
         <div class="get-in-sect row justify-content-around pb-xl-50">
             <div class="col-12 col-md-4">
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
-                    <form class="forms y-center flex-column" method="post" action="#" id="get-in">
-                        <input class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
+                    <form class="form pos-rel z-index-1 " method="post" action="#" id="get-in">
+                        <input class="input input-text input-theme input-border bg-white text-size-1 mb-15 mb-xl-20 pl-15"
                                id=name" type="text" placeholder="Name*">
-                        <input class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
+                        <input class="input input-text input-theme input-border bg-white text-size-1 mb-15 mb-xl-20 pl-15"
                                id="email" type="text" placeholder="Email*">
-                        <textarea class="input input-text input-theme input-border bg-white pos-rel z-index-1 text-size-1 mb-15 mb-xl-20 pl-15"
+                        <textarea class="input input-text input-theme input-border textarea-height bg-white text-size-1 mb-15 mb-xl-20 pl-15"
                                   id="message-farm" placeholder="Message"></textarea>
                         <div class="checked-sect y-center text-light z-index-1 mb-10 mb-xl-20">
                             <label class="checkbox-label y-center">
